# memory_leak_detector

./: .gitignore  CMakeLists.txt  README.md
lib/linkedlist/: CMakeLists.txt  linkedlist.c  linkedlist.h
src/: CMakeLists.txt  mldmalloc.c  mldmalloc.h
test/: CMakeLists.txt  test_mldmalloc.c
